--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+#docker
+docker-compose.yaml
+docker
+.env
 
 # dependencies
 /node_modules
@@ -21,11 +24,9 @@
 !.vscode/extensions.json
 .history/*
 
-
 #System Files
 .DS_Store
 Thumbs.db
-
 
 #log files
 npm-debug.log*
