--- a/realworld/config/packages/security.yaml
+++ b/realworld/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -19,6 +20,11 @@ security:
                 check_path: users_login
                 # success_handler: lexik_jwt_authentication.handler.authentication_success
                 # failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern:   ^/
+            stateless: true
+            jwt: ~
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
