--- a/realworld/.gitignore
+++ b/realworld/.gitignore
@@ -27,3 +27,7 @@
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> uploads folder ###
+/public/uploads/
+###< uploads folder ###
