--- a/realworld/config/services.yaml
+++ b/realworld/config/services.yaml
@@ -22,3 +22,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Helpers\File\FileUploaderService:
+        arguments:
+            $appUrl: '%env(APP_URL)%'
+            $uploadsDirectory: '%kernel.project_dir%/public/uploads/'
