--- a/realworld/composer.json
+++ b/realworld/composer.json
@@ -14,6 +14,7 @@
         "illuminate/support": "^10.48",
         "lexik/jwt-authentication-bundle": "^2.21",
         "nelmio/cors-bundle": "^2.5",
+        "pagerfanta/pagerfanta": "^4.7",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "symfony/asset": "6.4.*",
